Change FindCommandTest